# 3D_Viewer

./: README.md
src/: .gitignore  CMakeLists.txt  doxy_config  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  scene.cc  scene.h  shader.qrc  test.cc
src/controller/: controller.cc  controller.h
src/model/: parcer.cc  parcer.h  transformator.cc  transformator.h
src/shaders/: circlePoint.geom  dashLine.geom  line.geom  point.frag  squarePoint.geom  vertex.vert
